fixing headers for quotes, adding a larger gap for nav effect, not even sure how im getting that but i like it

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -131,7 +131,7 @@ nav {
                 &.bullet {
                     clear: both;
                     width: 37px;
-                    height: 21px;
+                    height: 20px;
                     font-size: 15px;
                     text-align: center;
                     vertical-align: middle;
